debian/git-email: make recommends on IO::Socket::SSL versioned
Version 1.951 (2013-07-03) of libio-socket-ssl-perl introduced the
following change:

 use Net::SSLeay::CTX_set_default_verify_paths to use openssl's builtin
 defaults for CA unless CA path/file was given (or IO::Socket::SSL builtins
 used)

From v1.8.5.5~5^2 (send-email: /etc/ssl/certs/ directory may not be
usable as ca_path, 2014-01-15) on, git relies on that behavior.
Declare the dependency.

Signed-off-by: Jonathan Nieder <jrnieder@gmail.com>

--- a/debian/control
+++ b/debian/control
@@ -218,7 +218,8 @@ Package: git-email
 Architecture: all
 Multi-Arch: foreign
 Depends: git (>> ${source:Upstream-Version}), git (<< ${source:Upstream-Version}-.)
-Recommends: libemail-valid-perl, libnet-smtp-ssl-perl, libauthen-sasl-perl
+Recommends: libemail-valid-perl, libnet-smtp-ssl-perl, libauthen-sasl-perl,
+ libio-socket-ssl-perl (>= 1.951)
 Suggests: git-doc
 Description: fast, scalable, distributed revision control system (email add-on)
  Git is popular version control system designed to handle very large
