--- a/.travis.yml
+++ b/.travis.yml
@@ -86,7 +86,7 @@ before_install:
       brew_force_set_latest_binary_hash perforce-server
       # Uncomment this if you want to run perf tests:
       # brew install gnu-time
-      brew install git-lfs perforce-server perforce gettext
+      brew install git-lfs perforce-server perforce gettext gpg
       brew link --force gettext
       ;;
     esac;
